add password encryption + add birthday borders + changes to add the patient entity have been finalized + add restriction on access only to own questionnaires

--- a/src/main/resources/templates/general/change-password.html
+++ b/src/main/resources/templates/general/change-password.html
@@ -17,33 +17,35 @@
     <div class="container mt-4 text-center">
         <h2 style="margin: 10px;">Изменение пароля</h2><br>
         
-        <form th:action="${flagRoleAdmin} ? @{/adminpage/profile/changepassword} : @{/profile/changepassword}" method="post" style="display: inline-block; width: 30rem;">
+        <form th:action="${flagRoleAdmin} ? @{/adminpage/profile/changepassword} : @{/profile/changepassword}" method="post" th:object="${passwords}" style="display: inline-block; width: 30rem;">
             <div class="form-group row">
                 <label class="input-group-text">Старый пароль</label>
                 <div class="col">
-                    <input type="password" class="form-control" name="lastPassword" id="lastPassword" th:value="${lastPassword}" required placeholder="Введите старый пароль">
+                    <input type="password" th:value="*{lastPassword}" class="form-control" name="lastPassword" id="lastPassword" required placeholder="Введите старый пароль">
                     <a href="#" class="last-password-control"></a>
                 </div>
             </div>
 
-            <div th:if="${errorLastPassword}" class="text-justify">
-                Старый пароль введен неверно!<br><br>
+            <div th:if="${#fields.hasErrors('lastPassword')}" class="text-justify">
+                <div th:errors="*{lastPassword}">LastPassword Error</div><br>
             </div> 
 
             <div class="form-group row">
                 <label class="input-group-text" style="height: 50%;">Новый пароль</label> 
                 <div class="col">
-                    <input type="password" class="form-control" name="newPassword" id="newPassword" th:value="${newPassword}" required placeholder="Введите новый пароль">
+                    <input type="password" th:value="*{newPassword}" class="form-control" name="newPassword" id="newPassword" required placeholder="Введите новый пароль">
                     <a href="#" class="new-password-control"></a>
-                    <input type="password" class="form-control" name="newPasswordRepeat" th:value="${newPasswordRepeat}" required placeholder="Повторите новый пароль" style="margin-top: 1rem;">
+                    <input type="password" th:value="*{newPasswordRepeat}" class="form-control" name="newPasswordRepeat" required placeholder="Повторите новый пароль" style="margin-top: 1rem;">
                 </div>
             </div> 
 
-            <div th:if="${errorNewPassword}" class="text-justify">
-                Введенные пароли не совпадают!<br><br>
+            <div th:if="${#fields.hasErrors('newPassword')}" class="text-justify">
+                <div th:errors="*{newPassword}">NewPassword Error</div>
             </div> 
-            <div th:if="${errorSuitablePassword}" class="text-justify">
-                Новый пароль должен состоять минимум из 8 символов и содержать хотя бы одну цифру, заглавную и строчную латинские буквы.<br>
+        
+            <div th:if="${#fields.hasErrors('newPasswordRepeat')}" class="text-justify">
+                <p th:if="${#fields.hasErrors('newPassword')}"></p>
+                <div th:errors="*{newPasswordRepeat}">NewPasswordRepeat Error</div>
             </div> 
 
             <br><button type="submit" class="btn btn-success" style="width: 160px;">Изменить пароль</button><br><br>
